# Platform-Grader

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build.yaml
src/: app.py  settings.py
src/api/: dependencies.py  events.py  schemas.py
src/infrastructure/aiohttp/: client.py
src/infrastructure/faststream/: app_with_healthcheck.py  broker.py
src/infrastructure/langchain/: __init__.py  llm.py  prompts.py  schemas.py
src/infrastructure/minio/: client.py
src/services/: criteria_based_grader.py  extract_linters.py  extract_tests.py  llm_grader.py  project_code.py  project_structure.py
